# ChASE

./: .buildinfo  .clang-format  .gitignore  .gitignore_additions  .gitlab-ci.yml  CMakeLists.txt  LICENSE  Makefile  QR-RR.html  README  README.TXT  README.md  abstract.html  activate-chase-env.sh  algorithm.html  analyze-mem-requirements.py  chase.html  chase.pc.in  chase_config.h.in  compile-chase.sh  eig.txt  example.html  filter.html  genindex.html  index.html  installation.html  lanczos.html  license.html  make.inc  module.html  objects.inv  optimizations.html  parallel.html  parameters.html  quick-start.html  reference.html  run-chase.sh  run.sh  sbatch_script_example.sh  search.html  (+4 more)
.doctrees/: QR-RR.doctree  (+18 more)
ChASE-Elemental/: CMakeLists.txt  ChASE_Elemental.hpp
ChASE-MPI/: CMakeLists.txt  blas_cuda_wrapper.hpp  blas_fortran.hpp  blas_templates.hpp  blas_templates.inc  chase_mpi.hpp  chase_mpi_matrices.hpp  chase_mpi_properties.hpp  chase_mpidla_interface.hpp  chase_mpihemm_interface.hpp  mpi_wrapper.hpp
ChASE-MPI/impl/: chase_mpidla.hpp  chase_mpidla_blas_lapack.hpp  chase_mpidla_blaslapack.hpp  chase_mpidla_blaslapack_seq.hpp  chase_mpidla_blaslapack_seq_inplace.hpp  chase_mpidla_cuda.hpp  chase_mpidla_cuda_seq.hpp  chase_mpidla_impl_interface.hpp  chase_mpidla_mgpu.hpp  chase_mpidla_mgpu_2.hpp  chase_mpihemm.hpp  chase_mpihemm_blas.hpp  chase_mpihemm_blas_seq.hpp  chase_mpihemm_blas_seq_inplace.hpp  chase_mpihemm_cuda.hpp  chase_mpihemm_cuda_seq.hpp  chase_mpihemm_mgpu.hpp  mgpu_cudaDLA.hpp  mgpu_cudaHemm.hpp
ChASE-MPI/kernels/: shift.cu
Impl/: CMakeLists.txt  chase_mpi_cpu.hpp  chase_seq_cpu.hpp  chase_seq_gpu.hpp  test.hpp
Impl/chase_cpu/: CMakeLists.txt  chase_cpu.hpp
Impl/chase_gpu/: CMakeLists.txt  chase_gpu.hpp  cuda_utils.hpp  nvtx.hpp
Impl/config/: config.hpp
Impl/cpu/: CMakeLists.txt  chase_seq_cpu.hpp
Impl/cuda/: CMakeLists.txt  chase_seq_gpu.hpp  cuda_utils.hpp  nvtx.hpp
Impl/cuda_aware_mpi/: CMakeLists.txt  chase_mpi_gpu.hpp
Impl/grid/: CMakeLists.txt  mpiGrid2D.hpp  nccl_utils.hpp
Impl/mpi/: CMakeLists.txt  chase_mpi_cpu.hpp  mpiGrid2D.hpp
Impl/nccl/: CMakeLists.txt  chase_nccl_gpu.hpp
Impl/pchase_cpu/: CMakeLists.txt  pchase_cpu.hpp
Impl/pchase_gpu/: CMakeLists.txt  pchase_gpu.hpp
docs/: CMakeLists.txt  GITLAB_CI_DOCS_SNIPPET.yml  QR-RR.rst  abstract.rst  algorithm.rst  chase.rst  conf.py  contribution.rst  deploy.sh  example.rst  index.rst  installation.rst  lanczos.rst  license.rst  module.rst  parallel.rst  parameters.rst  plan_pchase_cpu_pseudo_hermitian.md  quick-start.rst  reference.rst  solve_pseudo_missing_vs_julia.md  usage.rst  version.rst
docs/.unused_material/: output.rst  parallel.rst
docs/.unused_material/reference/: filter.rst
docs/ChASE_flowchart/: block-cyclic.pptx  flow-chart-chase_standalone.tex  flowchart_textwidth.tex  readme.txt
docs/_templates/: layout.html  version_selector.html
docs/api/: algorithm.rst  implementations.rst  index.rst  matrices.rst
docs/example/: gev.rst  helloworld.rst  io.rst  sequence.rst
docs/hooks/: pre-commit
docs/installation/: dependencies.rst  installcluster.rst  link.rst  suggestion.rst
docs/module/: chasempi.rst  chasempidla.rst  chasempidlaImpl.rst  chasempidlablaslapack.rst  chasempidlainterface.rst  chasempidlamultigpu.rst  chasempidlaseq.rst  chasempihemmmultigpu.rst  chasempihemmseq.rst  chasempimatrices.rst  config.rst  elemental.rst  namespace.rst  perf.rst
docs/parallel/: comm.rst  cpu.rst  distm.rst  elemental.rst  gpu.rst  gpu_seq.rst  mpi.rst  mpi_dla.rst  seq.rst  seqinplace.rst  shm.rst
docs/quick-start/: macos.rst  quick-install.rst
examples/0_hello_world/: 0_hello_world.cpp  CMakeLists.txt
examples/1_hello_world/: 1_hello_world.cpp  CMakeLists.txt
examples/1_sequence_eigenproblems/: 1_sequence_eigenproblems.cpp  CMakeLists.txt  ±
examples/2_input/: 2_input.cpp  CMakeLists.txt
examples/2_input_output/: 2_input_output.cpp  CMakeLists.txt
examples/3_installation/: CMakeLists.txt  Makefile  Makefile.modern  chase-app  chase-app-gpu.cpp  chase-app.cpp  chase-app.d  chase-c.c  chase-f.f90
examples/4_gev/: 4_gev.cpp  CMakeLists.txt  scalapack_fortran.hpp  scalapack_templates.hpp  scalapack_templates.inc
examples/4_interface/: 4_c_dist_chase.c  4_c_serial_chase.c  4_f_dist_chase.f90  4_f_serial_chase.f90  CMakeLists.txt
grid/: CMakeLists.txt  mpiGrid2D.hpp  mpiTypes.hpp  nccl_utils.hpp
interface/: CMakeLists.txt  chase_c.cpp  chase_c_interface.cpp  chase_c_interface.h  chase_f.f90  chase_fortran_interface.f90
linalg/: CMakeLists.txt
linalg/blaspp/: blaspp.hpp  blaspp.inc
linalg/cublaspp/: cublaspp.hpp
linalg/cusolverpp/: cusolverpp.hpp
linalg/distMatrix/: distMatrix.hpp  distMultiVector.hpp
linalg/internal/: CMakeLists.txt  typeTraits.hpp
linalg/lapackpp/: lapack_fortran.hpp  lapackpp.hpp  lapackpp.inc
linalg/matrix/: distMatrix.hpp  distMultiVector.hpp  matrix.hpp
linalg/scalapackpp/: scalapackpp.hpp  scalapackpp.inc
simple_driver/: CMakeLists.txt  simple_driver.cpp
tests/: CMakeLists.txt  QR_integration.cpp  QR_test.cpp  block_dist_herm_run.cpp  block_dist_pseudo_run.cpp  block_dist_quasi_run.cpp  chase_distributed_solve.cpp  chase_distributed_solve_pseudo_bse_test.cpp  chase_fortran_distributed_solve.f90  chase_fortran_serial_solve.f90  chase_serial_solve.cpp  chase_serial_solve_pseudo_bse_test.cpp  cyclic_dist_herm_run.cpp  cyclic_dist_pseudo_run.cpp  cyclic_dist_quasi_run.cpp  dist_pseudo_noinput.cpp  dist_quasi_noinput.cpp  first_test.cpp  herm_run.cpp  main.cpp  noinput.cpp  pseudo_noinput.cpp  pseudo_run.cpp  quasi_noinput.cpp  quasi_run.cpp  random.cpp
tests/QR/: CMakeLists.txt  QR_integration.cpp  QR_test.cpp  QR_test.hpp  util.h
tests/algorithm/: CMakeLists.txt  lanczos_for_H2_test.cpp
tests/elpa/: CMakeLists.txt  cusolver.cpp  elpa.cpp
tests/grid/: CMakeLists.txt  mpiGrid2D.cpp
tests/matrix/: CMakeLists.txt  distMatrix.cpp  distMultiVector.cpp  matrix.cpp
tests/mpi/: CMakeLists.txt  mpiGrid2D.cpp
unittests/: CMakeLists.txt  test_mgpu_Hemm.cpp
utils/: CMakeLists.txt  genRnd.cpp
(+646 files in other folders)
